--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=9999
+server.port= 8080
 #server.port=443
 #server.ssl.key-store=classpath:jishenghua.jks
 #server.ssl.key-alias=alias
@@ -7,13 +7,13 @@ server.port=9999
 #ssl的开关
 server.ssl.enable=false
 #登录超时-秒
-server.servlet.session.timeout=36000
+#server.servlet.session.timeout=36000
 #数据库连接
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/jsh_erp?useUnicode=true&characterEncoding=utf8&useCursorFetch=true&defaultFetchSize=500&allowMultiQueries=true&rewriteBatchedStatements=true&useSSL=false
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
+#spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/invoicing?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8&useSSL=false
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=123
 #generatorConfig专用属性
 project=src/main/java
 resource=src/main/resources
