--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.jsh</groupId>
-	<artifactId>jshERP</artifactId>
+	<artifactId>erp</artifactId>
 	<version>2.0.3-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>jshERP</name>
+	<name>erp</name>
 	<description>华夏ERP</description>
 
 	<parent>
@@ -111,7 +111,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>jshERP2.0</finalName>
+		<finalName>erp</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
