--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,10 +10,14 @@ server.ssl.enable=false
 #server.servlet.session.timeout=36000
 #数据库连接
 #spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/invoicing?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8&useSSL=false
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/invoicing?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8&useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=123
+spring.datasource.url=jdbc:mysql://47.106.194.61:3306/erp_test?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=123
+spring.datasource.password=Hmlin5#
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+
 #generatorConfig专用属性
 project=src/main/java
 resource=src/main/resources
